--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -467,7 +467,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         path: sable
-        ref: irctest_stable
+        ref: 1a8fbe56090990fd0ae1a204dc2ada2744a1c32e
         repository: Libera-Chat/sable
     - name: Install rust toolchain
       uses: actions-rs/toolchain@v1
