--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -436,6 +436,9 @@ jobs:
         toolchain: nightly
     - name: Enable Cargo cache
       uses: Swatinem/rust-cache@v2
+      with:
+        cache-on-failure: true
+        workspaces: sable -> sable/target
     - run: rustc --version
     - name: Build Sable
       run: |
