--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -477,6 +477,9 @@ jobs:
         toolchain: nightly
     - name: Enable Cargo cache
       uses: Swatinem/rust-cache@v2
+      with:
+        cache-on-failure: true
+        workspaces: sable -> sable/target
     - run: rustc --version
     - name: Build Sable
       run: |
