--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -451,7 +451,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/sable/target/debug//sbin:~/sable/target/debug//bin:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/sable/target/debug/sbin:~/sable/target/debug/bin:~/sable/target/debug:$PATH
         make sable
       timeout-minutes: 30
     - if: always()
