--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -233,7 +233,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         path: ngircd
-        ref: rel-26.1
+        ref: 0714466af88d71d6c395629cd7fb624b099507d4
         repository: ngircd/ngircd
     - name: Build ngircd
       run: |
