--- a/workflows.yml
+++ b/workflows.yml
@@ -250,6 +250,34 @@ software:
             make -j 4
             make install
 
+    sable:
+        name: Sable
+        repository: Libera-Chat/sable
+        refs:
+            stable: ff1179512a79eba57ca468a5f83af84ecce08a5b
+            release: null
+            devel: master
+            devel_release: null
+        path: sable
+        prefix: "$GITHUB_WORKSPACE/sable/target/debug"
+        pre_deps:
+            - name: Install rust toolchain
+              uses: actions-rs/toolchain@v1
+              with:
+                  toolchain: nightly
+                  profile: minimal
+                  override: true
+            - name: Enable Cargo cache
+              uses: Swatinem/rust-cache@v2
+              with:
+                workspaces: "sable -> target"
+                cache-on-failure: true
+            - run: rustc --version
+        separate_build_job: false
+        build_script: |
+            cd $GITHUB_WORKSPACE/sable/
+            cargo build
+
     snircd:
         name: snircd
         repository: quakenet/snircd
@@ -453,6 +481,9 @@ tests:
 
     nefarious:
         software: [nefarious]
+
+    sable:
+        software: [sable]
 
     # doesn't build because it can't find liblex for some reason
     #snircd:
